# AURORA

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md  experiment_serialiser.py  report.md  requirements.txt  wscript
analysis/: analysis_runner.py  configuration_analysis.py  report.jinja2  sequential.py
analysis/metrics/: air_hockey.py  hexapod_camera_vertical.py  hexapod_walls.py  maze.py  metrics.py
analysis/paper/: dataframe_preprocessor.py  generate_all_results_paper.py  latent_space_dim_comparison.py  p_values.py  plot_utils.py
cpp/: README.md  aurora.cpp  compilation_variables.hpp  encoder_factory.hpp  environment_initialiser.hpp  images_adjacent_behaviours.cpp  parameters_factory.hpp  project_includes.hpp  project_latent.cpp  save_video.cpp  train_ae_from_scratch.cpp  training_nn.cpp  visualise.cpp
cpp/algorithms/: algorithms_factory.hpp  initialise_global_parameters.hpp  quality_diversity_aurora_project.hpp
cpp/dbg_tools/: dbg.cpp  dbg.hpp
cpp/environments/: environments_factory.hpp  image_utils.hpp
cpp/genotype/: all_gen_mutation.hpp  gen_mlp.hpp
cpp/interactive_map/: analysis.hpp  (+2 more)
docs/: all_experiments.csv  doc_experiment_class.md
resources/: LS_maze_hard.xml  LS_maze_hard_longer_and_more_lasers.xml  LS_maze_hard_longer_lasers.xml  hexapod_v2.urdf  planar_arm.urdf
singularity/: build_final_image  exec_hpc.sh  experiment.py  factory_experiments.py  hpc_config.py  singularity-base.def  singularity.def  start_container
waf_tools/: dart.py  magnum_integration.py  magnum_plugins.py  robot_dart.py  robox2d.py
(+81 files in other folders)
